src/objects/MPOT_Monthly_Update_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issues_Changes__c</fullName>
        <label>Issues/Changes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>GLBL_Project__c</referenceTo>
        <relationshipLabel>MPOT Monthly Update Change Logs</relationshipLabel>
        <relationshipName>Monthly_Update_Change_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPOT_Monthly_Update_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MPOT Monthly Update Change Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Complete_Monthly_Update_Change_Log</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Date__c</columns>
        <columns>User__c</columns>
        <columns>Status__c</columns>
        <columns>Issues_Changes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Complete Monthly Update Change Log</label>
        <language>en_US</language>
        <sharedTo>
            <group>MPOT_Database_Administrator</group>
            <group>MPOT_Dataload</group>
            <group>MPOT_Full_Active</group>
            <group>MPOT_General</group>
            <group>MPOT_General_Plus</group>
            <group>MPOT_NRO</group>
            <group>MPOT_Project_Owner</group>
            <group>MPOT_Project_Owner_Plus</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ML-{000000}</displayFormat>
        <label>Monthly Update Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPOT Monthly Update Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>